Excel Problem Solve

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
+    "/dashboard/dist/sb-admin-2.js": "/dashboard/dist/sb-admin-2.js",
     "/css/app.css": "/css/app.css"
 }
